dfir_rs/tests/compile-fail-stable/surface_inline_cycle.rs
../compile-fail/surface_inline_cycle.rs